add_library(polymorphism-cpp-library source.cpp header.hpp)
target_compile_options(polymorphism-cpp-library PUBLIC -fblocks)
target_include_directories(polymorphism-cpp-library PUBLIC )
add_executable(polymorphism-cpp main.cpp)
target_compile_options(polymorphism-cpp-library PUBLIC -fblocks)
target_link_libraries(polymorphism-cpp LINK_PUBLIC polymorphism-cpp-library)
