add_library(testbench-c-library source.c header.h)
target_compile_options(testbench-c-library PUBLIC -fblocks)
target_include_directories(testbench-c-library PUBLIC )
add_executable(testbench-c main.c)
target_compile_options(testbench-c PUBLIC -fblocks)
target_link_libraries(testbench-c LINK_PUBLIC testbench-c-library)
